# dstake_ip_fi

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/icp_dsatke_backend/: Cargo.toml  icp_dsatke_backend.did
src/icp_dsatke_backend/src/: lib.rs
src/icp_dsatke_frontend/: index.html  package.json  tailwind.config.js
src/icp_dsatke_frontend/src/: App.jsx  main.jsx
