[package]
name = "icp_dsatke_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.8.3"
ic-cdk-macros = "0.8.3"
candid = "0.8.4"           # Must be compatible with ic-cdk
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"       # Add this explicitly
once_cell = "1.19"



